--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"autoprefixer": "^10.4.14",
 		"flowbite": "^1.7.0",
 		"flowbite-react": "^0.4.10",
+		"postcss": "^8.4.24",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
