--- a/package.json
+++ b/package.json
@@ -4,18 +4,17 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-
 		"tailwind": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
 		"dev": "vite",
 		"build": "vite build",
 		"lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview"
-		
 	},
 	"dependencies": {
 		"autoprefixer": "^10.4.14",
 		"flowbite": "^1.7.0",
 		"flowbite-react": "^0.4.10",
+		"framer-motion": "^10.12.18",
 		"postcss": "^8.4.24",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
