--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"framer-motion": "^10.12.18",
 		"postcss": "^8.4.24",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-multi-carousel": "^2.8.4"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.37",
