--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"postcss": "^8.4.24",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-multi-carousel": "^2.8.4"
+		"react-slick": "^0.29.0",
+		"slick-carousel": "^1.8.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.37",
