--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
+		"json-server": "json-server --watch database.json",
 		"tailwind": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
 		"dev": "vite",
 		"build": "vite build",
@@ -20,6 +21,7 @@
 		"flowbite": "^1.7.0",
 		"flowbite-react": "^0.4.10",
 		"framer-motion": "^10.12.18",
+		"json-server": "^0.17.3",
 		"postcss": "^8.4.24",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
